# BeyondMimic-Reproduction

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
checkpoints/: README.md
configs/data/: lafan1.yaml  state_latent_dataset.yaml  teacher_rollout.yaml
configs/diffusion/: state_latent_transformer.yaml
configs/guidance/: composed.yaml  inpainting.yaml  joystick.yaml  obstacle.yaml  waypoint.yaml
configs/stage2/: dagger_locomotion_25hz.yaml  dagger_locomotion_50hz.yaml  dagger_walk1_50hz.yaml  vae_dagger_locomotion_25hz_overnight.yaml  vae_dagger_locomotion_overnight.yaml  vae_paper.yaml  (+6 more)
data/: README.md
docs/: controller_interfaces.md  data_contracts_stage2_stage3.md  data_format.md  environment.md  limitations.md  migration_from_legacy.md  paper_alignment_matrix.md  pipeline.md  reproduction_claims.md  rtx4090_handoff_guide.md  rtx4090_handoff_guide_zh.md  stage2_stage3_release_summary.md  stage2_stage3_source_inventory.json  stage2_stage3_source_inventory.md  stage2_stage3_status.md  stage2_stage3_transfer_manifest.json  stage2_stage3_transfer_manifest.md  stage2_vae_and_dagger.md  stage3_diffusion.md  transfer_to_4090.md  troubleshooting.md
outputs/: README.md
requirements/: analysis.txt  base.txt  isaaclab.txt  mujoco.txt  torch.txt
tests/: test_dataset_schema.py  test_diffusion_shapes.py  test_downstream_guidance_smoke.py  test_guidance_costs.py  test_mujoco_g1_pd_smoke.py  test_mujoco_sim_to_sim_smoke.py  test_stage23_training_runtime.py  test_stage2_stage3_contracts.py  test_stage3_diffusion_guidance.py  test_vae_shapes.py
(+174 files in other folders)
